--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "emberine",
   "version": "0.0.0",
-  "description": "Small description for emberine goes here",
+  "description": "INE data visualizator with Ember",
   "license": "MIT",
   "author": "",
   "directories": {
@@ -33,6 +33,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
+    "ember-select": "^0.3.0",
     "ember-source": "~2.13.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
@@ -40,5 +41,8 @@
   "engines": {
     "node": ">= 4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "golden-layout": "^1.5.8"
+  }
 }
