--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ember-source": "~2.13.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
+    "semantic-ui": "^2.2.10",
+    "semantic-ui-ember": "^2.0.1"
   },
   "engines": {
     "node": ">= 4"
