--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "emberine",
   "dependencies": {
-    "semantic-ui": "^2.2.10"
+    "semantic-ui": "^2.2.10",
+    "nvd3": "^1.8.0",
+    "d3": "^3.0.0"
   }
 }
